--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=8bd896b15e11bf32de01212e2f2340dc
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://phpmyadmin:AdaLinkLoulouZelda@127.0.0.1:3306/exercices-symfony
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
