--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,7 @@ security:
                     - App\Security\LoginFormAuthenticator
             logout: 
                 path: logout
+                target: /login
 
             # activate different ways to authenticate
 
